# amaruai

./: .gitignore  PR_REVIEW_CHANGES.md  README.md  WORKFLOW_FILE_UPLOAD_FIX.md  WORKFLOW_FILE_UPLOAD_FIX_V2.md  migration_asset_selection_config.sql  test_managed_field_logic.py  test_workflow_assets_v2.py  test_workflow_file_upload.py
fastapi/: .env.example  .replit  DYNAMIC_ASSETS_IMPLEMENTATION.md  Dockerfile  Dockerfile.worker  SECURITY_IMPROVEMENTS.md  WORKFLOW_STREAMING_FIX.md  alembic.ini  database_backup.sql  db_bak_oct_24_2024.sql  initial-db-structure.sql  pyproject.toml  railway.toml  railway.worker.toml  startup.sh  test_dynamic_assets.py
fastapi/alembic/: env.py
fastapi/alembic/versions/: 001_add_managed_field_indexes.py  1234567890ab_consistent_naming.py  add_managed_index.sql  add_remaining_tables.py  combined_chatmodel_migration.py  e17a9d440ea9_fresh_start.py  ec402afe7a52_update_processtype_enum_handling.py  xxxxxxxxxxxx_add_workflow_and_workflow_step_tables.py
fastapi/amaruai_api/: __init__.py
fastapi/app/: README.md  admin.py  crud.py  database.py  embeddings.py  generate_backup.py  main.py  models.py  railway.toml  schemas.py  seed.py  utils.py
fastapi/app/api/v1/: __init__.py  assets.py  authentication.py  batch_flow.py  bulk_flow.py  categories.py  chat.py  chat_models.py  chat_old.py  chatsse.py  dependencies.py  knowledge_bases.py  personas.py  prompt_templates.py  rag.py  rate_limiter.py  router.py  tags.py  tools.py  users.py  workflows.py
fastapi/app/config/: asset_utils.py  chat_utils.py  crewai_service.py  memory_utils.py  openai_assistant_utils.py  openai_utils.py  openrouter_utils.py  rag_utils.py  rate_utils.py  supabase.py
fastapi/app/templates/admin/: category_create.html  category_detail.html  category_edit.html  chat.html  chat_model_create.html  chat_model_detail.html  chat_model_edit.html  chat_model_list.html  dashboard.html  persona_detail.html  persona_edit.html  prompt_template_detail.html  prompt_template_edit.html  tag_detail.html  tag_edit.html  tool_create.html  tool_detail.html  tool_edit.html  workflow_create.html  workflow_detail.html  workflow_edit.html  workflow_list.html  (+2 more)
fastapi/app/workers/: asset_transcription.py  docling_util.py  video_utils.py  whisper_util.py  whisper_utility.py
fastapi/full_db/: amaruai_schema_backup.sql
(+194 files in other folders)
