[tool.poetry]
name = "amaruai-api"
version = "0.1.0"
description = ""
authors = ["Christopher Marin <christopher.marin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
fastapi = "^0.115.2"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
uvicorn = "^0.31.1"
jinja2 = "^3.1.4"
python-multipart = "^0.0.12"
httpx = "^0.27.2"
supabase = "^2.9.1"
aiohttp = "^3.11.11"
crewai = {extras = ["tools"], version = "^0.86.0"}
sse-starlette = "^2.2.0"
llama-index = "^0.12.8"
llama-index-storage-chat-store-postgres = "^0.2.0"
docling = "^2.14.0"
numba = ">=0.56.0"
llvmlite = ">=0.43.0"
openai-whisper = "^20240930"
llama-index-embeddings-openai = "^0.3.1"
llama-index-vector-stores-supabase = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
